[gd_scene load_steps=21 format=3 uid="uid://b1jg4g6wbv0qw"]

[ext_resource type="Script" uid="uid://bwfn3gbxfptq0" path="res://Scripts/settings_drawer.gd" id="1_8m3lo"]
[ext_resource type="StyleBox" uid="uid://di483ahmdks4u" path="res://Themes/toggle_drawer_button.tres" id="1_gpt4e"]
[ext_resource type="Theme" uid="uid://dwboubtw2bfss" path="res://Themes/checkbox_theme.tres" id="2_7xck0"]
[ext_resource type="Texture2D" uid="uid://kc71g6knpg0f" path="res://Icons/drawer_open.svg" id="3_2cnwg"]
[ext_resource type="Theme" uid="uid://bfxmorphywksx" path="res://Themes/label_theme.tres" id="3_7h3a6"]
[ext_resource type="StyleBox" uid="uid://dbhyjknms0hnr" path="res://Themes/toggle_drawer_button_pressed.tres" id="5_5fwcl"]
[ext_resource type="Texture2D" uid="uid://cuhago8f7mb4k" path="res://Icons/drawer_close.svg" id="5_fh5r5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7i72"]
bg_color = Color(0.3, 0.3, 0.3, 0.862745)
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.188235, 0.701961, 1, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_detail = 1

[sub_resource type="Theme" id="Theme_gpt4e"]
Panel/styles/panel = SubResource("StyleBoxFlat_p7i72")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76v2p"]
content_margin_left = 10.0
content_margin_right = 0.0
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mai8y"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 10.0
bg_color = Color(0.498039, 0.498039, 0.498039, 0.498039)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.701961, 1, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_drdnd"]

[sub_resource type="Theme" id="Theme_2cnwg"]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/decrement_pressed = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/icons/increment_pressed = null
HScrollBar/styles/grabber = SubResource("StyleBoxFlat_76v2p")
HScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_76v2p")
HScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_76v2p")
HScrollBar/styles/scroll = SubResource("StyleBoxFlat_mai8y")
HScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_drdnd")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fh5r5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7h3a6"]
bg_color = Color(0.19, 0.19, 0.19, 0.235294)
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.188235, 0.701961, 1, 1)
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_detail = 1

[sub_resource type="Theme" id="Theme_8m3lo"]
Button/icons/icon = ExtResource("3_2cnwg")
Button/styles/disabled = ExtResource("1_gpt4e")
Button/styles/focus = SubResource("StyleBoxEmpty_fh5r5")
Button/styles/hover = SubResource("StyleBoxFlat_7h3a6")
Button/styles/normal = ExtResource("1_gpt4e")
Button/styles/pressed = ExtResource("5_5fwcl")

[sub_resource type="Animation" id="Animation_gpt4e"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-20, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/HBoxContainer/ToggleDrawer:theme:Button/icons/icon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2cnwg")]
}

[sub_resource type="Animation" id="Animation_8m3lo"]
resource_name = "toggle_settings_drawer_off"
length = 0.6
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-20, -0.25, 0, 0.3, -45.5, -278, -0.0666667, 122, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/HBoxContainer/ToggleDrawer:theme:Button/icons/icon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2cnwg")]
}

[sub_resource type="Animation" id="Animation_7xck0"]
resource_name = "toggle_settings_drawer_on"
length = 0.6
step = 0.0166667
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 3, 0),
"points": PackedFloat32Array(-278, -0.0666667, 122, 0, 157.5, -11, -0.0133861, -12, 0.0199472, 8, -23, -0.00833334, 2.25, 0.00833334, -2.25, -20, -0.00833334, -1.625, 0.00833334, 1.625),
"times": PackedFloat32Array(0, 0.516667, 0.55, 0.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/HBoxContainer/ToggleDrawer:theme:Button/icons/icon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_fh5r5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2cnwg"]
_data = {
&"RESET": SubResource("Animation_gpt4e"),
&"toggle_settings_drawer_off": SubResource("Animation_8m3lo"),
&"toggle_settings_drawer_on": SubResource("Animation_7xck0")
}

[node name="SettingsDrawer" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 222.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
script = ExtResource("1_8m3lo")

[node name="PanelContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 62

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Background" type="Panel" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = SubResource("Theme_gpt4e")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Scroll" type="ScrollContainer" parent="PanelContainer/HBoxContainer/Background/MarginContainer"]
layout_mode = 2
mouse_filter = 2
horizontal_scroll_mode = 0

[node name="Settings" type="VBoxContainer" parent="PanelContainer/HBoxContainer/Background/MarginContainer/Scroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShowCompleted" type="CheckBox" parent="PanelContainer/HBoxContainer/Background/MarginContainer/Scroll/Settings"]
layout_mode = 2
theme = ExtResource("2_7xck0")
text = "Show all completed"

[node name="ShowPriorities" type="CheckBox" parent="PanelContainer/HBoxContainer/Background/MarginContainer/Scroll/Settings"]
layout_mode = 2
theme = ExtResource("2_7xck0")
text = "Enable priorities
"

[node name="ShowPriorityTool" type="CheckBox" parent="PanelContainer/HBoxContainer/Background/MarginContainer/Scroll/Settings"]
layout_mode = 2
theme = ExtResource("2_7xck0")
button_pressed = true
text = "Show priority tool popup"

[node name="PriorityFilterLabel" type="Label" parent="PanelContainer/HBoxContainer/Background/MarginContainer/Scroll/Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("3_7h3a6")
text = "Priority: ALL"
horizontal_alignment = 1

[node name="PriorityFilter" type="HScrollBar" parent="PanelContainer/HBoxContainer/Background/MarginContainer/Scroll/Settings"]
layout_mode = 2
size_flags_vertical = 1
mouse_force_pass_scroll_events = false
theme = SubResource("Theme_2cnwg")
max_value = 4.0
step = 1.0
value = 4.0
rounded = true

[node name="ToggleDrawer" type="Button" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = SubResource("Theme_8m3lo")
toggle_mode = true
button_pressed = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2cnwg")
}
speed_scale = 1.25

[connection signal="toggled" from="PanelContainer/HBoxContainer/ToggleDrawer" to="." method="_on_toggle_drawer_toggled"]
